--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GreenSense – Smart Farming Insights</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Root\CSS\Style.css">
+
+
 </head>
 
 <body>
