Refactor project structure and update asset paths
Moved HTML and CSS files to the Main directory and updated asset paths in index.html to reflect new locations. Added headerback.jpeg image to Main directory. This improves project organization and ensures correct asset referencing.

--- a/Main/index.html
+++ b/Main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GreenSense – Smart Farming Insights</title>
-    <link rel="stylesheet" href="Root\CSS\Style.css">
+    <link rel="stylesheet" href="src\Styles\Style.css">
 
 
 </head>
@@ -18,7 +18,7 @@
             <p>Track sales, analyze crop performance, and get real insights that boost your farm’s profitability.</p>
             <a href="#cta" class="btn-primary">Get Started</a>
         </div>
-        <img src="images/greenhouse-illustration.png" class="hero-image" alt="GreenSense Illustration">
+        <img src="src\HTML\headerback.jpeg" class="hero-image" alt="GreenSense Illustration">
     </header>
 
     <!-- FEATURES SECTION -->
