Update image assets and references in index.html
Moved image assets to src/images, updated image references in index.html to use the new paths, and added new images for analytics, logo, notification, and profit features. Also renamed headerback.jpeg to the new directory for better organization.

--- a/Main/index.html
+++ b/Main/index.html
@@ -18,7 +18,7 @@
             <p>Track sales, analyze crop performance, and get real insights that boost your farm’s profitability.</p>
             <a href="#cta" class="btn-primary">Get Started</a>
         </div>
-        <img src="src\HTML\headerback.jpeg" class="hero-image" alt="GreenSense Illustration">
+        <img src="src/images/logo.png" class="hero-image" alt="GreenSense Illustration">
     </header>
 
     <!-- FEATURES SECTION -->
@@ -28,19 +28,19 @@
         <div class="feature-container">
 
             <div class="feature-card">
-                <img src="images/profit.png" alt="">
+                <img src="src/images/profit.jpg" alt="">
                 <h3>Track Profitability</h3>
                 <p>Identify which crops earn the most and optimize your planting decisions.</p>
             </div>
 
             <div class="feature-card">
-                <img src="images/analytics.png" alt="">
+                <img src="src/images/analytic.png" alt="">
                 <h3>Smart Analytics</h3>
                 <p>Turn your sales logs into simple, easy-to-read charts and insights.</p>
             </div>
 
             <div class="feature-card">
-                <img src="images/alert.png" alt="">
+                <img src="src/images/notification.png" alt="">
                 <h3>Reduce Waste</h3>
                 <p>Receive alerts on overspending or low-performing crops before losses pile up.</p>
             </div>
@@ -57,7 +57,7 @@
                 Whether you grow lettuce, tomatoes, herbs, or any greenhouse crop, GreenSense helps you spend smarter and earn more.
             </p>
         </div>
-        <img src="images/dashboard.png" alt="Dashboard Preview" class="visual-img">
+        <img src="src/images/headerback.jpeg" alt="Dashboard Preview" class="visual-img">
     </section>
 
     <!-- INFO / DETAILS SECTION -->
