Add navbar and improve SEO and styles
Introduced a navigation bar to index.html and updated section IDs for anchor navigation. Enhanced SEO and social preview meta tags, added favicon, and improved Style.css with navbar styles, smooth scrolling, button, and feature card hover effects.

--- a/Main/index.html
+++ b/Main/index.html
@@ -4,12 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GreenSense – Smart Farming Insights</title>
-    <link rel="stylesheet" href="src\Styles\Style.css">
 
+    <!-- SEO -->
+    <meta name="description" content="GreenSense – Smart Farming Insights for tracking sales, crop performance, profitability, and analytics.">
+    <meta name="author" content="GreenSense Team">
 
+    <!-- Social Preview -->
+    <meta property="og:title" content="GreenSense – Smart Farming Insights">
+    <meta property="og:description" content="Grow smarter with data-backed insights for greenhouse farming.">
+    <meta property="og:image" content="src/images/headerback.jpeg">
+    <meta property="og:type" content="website">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="src/images/favicon.png">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="src/Styles/Style.css">
 </head>
 
 <body>
+
+    <!-- NAVBAR -->
+    <nav class="navbar">
+        <h2 class="logo">GreenSense</h2>
+        <ul>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#info">How it Works</a></li>
+            <li><a href="#cta" class="btn-primary">Get Started</a></li>
+        </ul>
+    </nav>
 
     <!-- HERO SECTION -->
     <header class="hero">
@@ -22,7 +45,7 @@
     </header>
 
     <!-- FEATURES SECTION -->
-    <section class="features">
+    <section class="features" id="features">
         <h2>Why GreenSense?</h2>
 
         <div class="feature-container">
@@ -61,7 +84,7 @@
     </section>
 
     <!-- INFO / DETAILS SECTION -->
-    <section class="info">
+    <section class="info" id="info">
         <h2>How GreenSense Helps You Succeed</h2>
 
         <ul class="info-list">
