Revamp homepage content and add new sections
Updated index.html with improved marketing copy, clearer feature descriptions, and new sections: How It Works, Benefits, Who Can Use, and Future Features. Adjusted navigation and section anchors for clarity. Updated Style.css to style new sections and improve layout consistency.

--- a/Main/index.html
+++ b/Main/index.html
@@ -6,17 +6,13 @@
     <title>GreenSense – Smart Farming Insights</title>
 
     <!-- SEO -->
-    <meta name="description" content="GreenSense – Smart Farming Insights for tracking sales, crop performance, profitability, and analytics.">
+    <meta name="description" content="GreenSense helps small greenhouse farmers track sales, reduce waste, and improve profitability through smart analytics.">
     <meta name="author" content="GreenSense Team">
 
     <!-- Social Preview -->
     <meta property="og:title" content="GreenSense – Smart Farming Insights">
     <meta property="og:description" content="Grow smarter with data-backed insights for greenhouse farming.">
     <meta property="og:image" content="src/images/headerback.jpeg">
-    <meta property="og:type" content="website">
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="src/images/favicon.png">
 
     <!-- CSS -->
     <link rel="stylesheet" href="src/Styles/Style.css">
@@ -29,7 +25,8 @@
         <h2 class="logo">GreenSense</h2>
         <ul>
             <li><a href="#features">Features</a></li>
-            <li><a href="#info">How it Works</a></li>
+            <li><a href="#how">How It Works</a></li>
+            <li><a href="#benefits">Benefits</a></li>
             <li><a href="#cta" class="btn-primary">Get Started</a></li>
         </ul>
     </nav>
@@ -38,10 +35,14 @@
     <header class="hero">
         <div class="hero-content">
             <h1>Grow Smarter with GreenSense</h1>
-            <p>Track sales, analyze crop performance, and get real insights that boost your farm’s profitability.</p>
+            <p>
+                Farming is challenging — especially for small greenhouse growers. 
+                GreenSense gives you simple, smart insights that help you reduce waste, 
+                manage expenses, and grow more profitably without complicated tools.
+            </p>
             <a href="#cta" class="btn-primary">Get Started</a>
         </div>
-        <img src="src/images/logo.png" class="hero-image" alt="GreenSense Illustration">
+        <img src="src/images/logo.png" class="hero-image" alt="GreenSense Logo">
     </header>
 
     <!-- FEATURES SECTION -->
@@ -49,25 +50,50 @@
         <h2>Why GreenSense?</h2>
 
         <div class="feature-container">
-
             <div class="feature-card">
                 <img src="src/images/profit.jpg" alt="">
-                <h3>Track Profitability</h3>
-                <p>Identify which crops earn the most and optimize your planting decisions.</p>
+                <h3>Financial Blind Spot Detection</h3>
+                <p>See real production costs and identify your most profitable crops.</p>
             </div>
 
             <div class="feature-card">
                 <img src="src/images/analytic.png" alt="">
                 <h3>Smart Analytics</h3>
-                <p>Turn your sales logs into simple, easy-to-read charts and insights.</p>
+                <p>Turn your sales and expenses into simple, easy-to-read data insights.</p>
             </div>
 
             <div class="feature-card">
                 <img src="src/images/notification.png" alt="">
-                <h3>Reduce Waste</h3>
-                <p>Receive alerts on overspending or low-performing crops before losses pile up.</p>
+                <h3>Waste Reduction Alerts</h3>
+                <p>Get notified when expenses spike or crops underperform.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- HOW IT WORKS SECTION -->
+    <section class="how" id="how">
+        <h2>How GreenSense Works</h2>
+
+        <div class="how-container">
+            <div class="how-step">
+                <h3>1. Track Your Transactions</h3>
+                <p>Log every sale and expense — seeds, fertilizers, harvests, deliveries.</p>
             </div>
 
+            <div class="how-step">
+                <h3>2. AI Processing</h3>
+                <p>GreenSense analyzes your recorded data automatically.</p>
+            </div>
+
+            <div class="how-step">
+                <h3>3. Smart Alerts</h3>
+                <p>Receive notifications about unusual spending or low-performing crops.</p>
+            </div>
+
+            <div class="how-step">
+                <h3>4. Clear Visual Reports</h3>
+                <p>View charts showing profits, waste reduction, and crop trends.</p>
+            </div>
         </div>
     </section>
 
@@ -76,30 +102,50 @@
         <div class="visual-text">
             <h2>Insights That Empower Farmers</h2>
             <p>
-                GreenSense transforms raw numbers into meaningful recommendations.
-                Whether you grow lettuce, tomatoes, herbs, or any greenhouse crop, GreenSense helps you spend smarter and earn more.
+                GreenSense transforms raw data into meaningful recommendations.
+                Whether you grow lettuce, tomatoes, herbs, or greenhouse crops,
+                the system helps you spend smarter and earn more.
             </p>
         </div>
         <img src="src/images/headerback.jpeg" alt="Dashboard Preview" class="visual-img">
     </section>
 
-    <!-- INFO / DETAILS SECTION -->
-    <section class="info" id="info">
+    <!-- BENEFITS SECTION -->
+    <section class="info" id="benefits">
         <h2>How GreenSense Helps You Succeed</h2>
 
         <ul class="info-list">
-            <li><strong>Easy Input:</strong> Record sales and expenses with just a few taps.</li>
-            <li><strong>Profit Reports:</strong> Know what crops are worth your time and resources.</li>
-            <li><strong>Expense Tracking:</strong> See where your money goes and plan better.</li>
-            <li><strong>Smart Alerts:</strong> Get notified when something unusual is happening.</li>
-            <li><strong>Data-Backed Guidance:</strong> Plant the right crops at the right time.</li>
+            <li><strong>Save Money:</strong> Understand exactly where your money goes.</li>
+            <li><strong>Reduce Waste:</strong> Prevent overbuying and unnecessary expenses.</li>
+            <li><strong>Increase Profitability:</strong> Identify top-performing crops.</li>
+            <li><strong>Plan Better:</strong> Predict demand using historical data.</li>
+            <li><strong>Peace of Mind:</strong> Let GreenSense monitor trends for you.</li>
+        </ul>
+    </section>
+
+    <!-- WHO CAN USE IT -->
+    <section class="who">
+        <h2>Who Can Use GreenSense?</h2>
+        <p>
+            GreenSense is perfect for greenhouse farmers, indoor growers, vertical farms, 
+            and anyone selling directly to markets, restaurants, or subscription buyers.
+        </p>
+    </section>
+
+    <!-- FUTURE FEATURES -->
+    <section class="future">
+        <h2>The Future of GreenSense</h2>
+        <ul>
+            <li>IoT integration for automatic greenhouse monitoring</li>
+            <li>Advanced forecasting for crop demand</li>
+            <li>More personalized recommendations</li>
         </ul>
     </section>
 
     <!-- CTA SECTION -->
     <section class="cta" id="cta">
         <h2>Ready to Grow More Efficiently?</h2>
-        <p>Join thousands of greenhouse farmers improving their harvest with GreenSense.</p>
+        <p>Start tracking your sales and expenses today — grow smarter, not harder.</p>
         <a href="#" class="btn-primary">Try GreenSense Now</a>
     </section>
 
