Improve responsive styles and update section comment
Enhanced CSS for better responsiveness on screens below 900px and 500px, including adjustments to navbar, hero, and feature containers. Also updated an HTML comment for clarity in the 'Who' section.

--- a/Main/index.html
+++ b/Main/index.html
@@ -123,7 +123,7 @@
         </ul>
     </section>
 
-    <!-- WHO CAN USE IT -->
+    <!--  WHO SECTION   -->
     <section class="who">
         <h2>Who Can Use GreenSense?</h2>
         <p>
